[package]
name = "bench-gig"
version = "0.1.0"
edition = "2024"

[dependencies]
bench-core = { path = "./bench-core" }
rand = "0.10.0"
tokio = { version = "1.49.0", features = ["time", "rt", "macros"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[workspace]
members = ["bench-core"]

[profile.release]
debug = true